css modified by note buttons on mobile and fixed re ordering

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -181,10 +181,6 @@
     background-color: var(--color-neutral-200);
     color: var(--color-neutral-700);
     border: 1px solid var(--color-neutral-300);
-    padding: 0.5rem 0.8rem;
-    font-size: 1.2rem;
-    min-width: 40px;
-    border-radius: 0.375rem;
     transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
   }
 
@@ -243,13 +239,12 @@
     padding: 15px;
     background-color: var(--color-white);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-    transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out, border-color 0.2s ease-in-out,background-color 0.2s ease-in-out;;
   }
 
   .clipboardNote{
     border-color: var(--color-brand-primary);
     background-color: var(--color-background-add-section);
-    order: -2; 
   }
 
   .clipboardNote .noteTitle {
@@ -266,7 +261,6 @@
   .pinnedNote {
     border-color: var(--color-accent-pinned-border);
     background-color: var(--color-accent-pinned-light);
-    order: -1;
   }
 
   .noteItem:hover {
@@ -423,6 +417,13 @@
   @media (max-width: 480px) {
     .buttonGroup {
       flex-wrap: wrap;
-      justify-content: center; 
+      justify-content: center;
+      gap:.4rem; 
+    }
+
+    .buttonGroup .button{
+      width: 2rem;
+      height: 2rem;
+      padding: 0px;
     }
   }
